--- a/kiro-kaiji-refactor-rampage/package.json
+++ b/kiro-kaiji-refactor-rampage/package.json
@@ -28,6 +28,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@monaco-editor/loader": "^1.5.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^21.1.7",
