--- a/kiro-kaiji-refactor-rampage/package.json
+++ b/kiro-kaiji-refactor-rampage/package.json
@@ -21,6 +21,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "axios": "^1.11.0",
     "monaco-editor": "^0.52.2",
     "pinia": "^3.0.3",
