✅ feat: kiro-kaiji-refactor-rampage - 16 Create comprehensive E2E testing suite with Playwright

--- a/kiro-kaiji-refactor-rampage/package.json
+++ b/kiro-kaiji-refactor-rampage/package.json
@@ -13,7 +13,11 @@
     "test": "vitest --run",
     "test:unit": "vitest",
     "test:watch": "vitest",
-    "test:e2e": "echo 'E2E tests not yet configured'",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
     "coverage": "vitest --coverage",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
@@ -30,6 +34,7 @@
   },
   "devDependencies": {
     "@monaco-editor/loader": "^1.5.0",
+    "@playwright/test": "^1.54.2",
     "@tailwindcss/postcss": "^4.1.11",
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^21.1.7",
@@ -45,6 +50,7 @@
     "jiti": "^2.4.2",
     "jsdom": "^26.1.0",
     "npm-run-all2": "^8.0.4",
+    "playwright": "^1.54.2",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.11",
