--- a/kiro-kaiji-refactor-rampage/package.json
+++ b/kiro-kaiji-refactor-rampage/package.json
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@monaco-editor/loader": "^1.5.0",
     "@playwright/test": "^1.54.2",
-    "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/forms": "^0.5.10",
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.17.0",
@@ -53,7 +53,7 @@
     "playwright": "^1.54.2",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.0",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0",
