--- a/kiro-kaiji-refactor-rampage/aws/package.json
+++ b/kiro-kaiji-refactor-rampage/aws/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/client-dynamodb": "^3.450.0",
     "@aws-sdk/lib-dynamodb": "^3.450.0",
     "jsonwebtoken": "^9.0.2",
+    "serverless-dynamodb-local": "^0.2.40",
     "serverless-plugin-typescript": "^2.1.5",
     "uuid": "^9.0.1"
   },
@@ -25,6 +26,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.9.0",
     "@types/uuid": "^9.0.7",
+    "flat": "^5.0.2",
     "jest": "^29.7.0",
     "serverless": "^3.38.0",
     "serverless-offline": "^13.3.0",
