--- a/kiro-kaiji-refactor-rampage/package.json
+++ b/kiro-kaiji-refactor-rampage/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kiro-kaiji-refactor-rampage",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "license": "AGPL-3.0",
   "private": true,
   "type": "module",
   "engines": {
@@ -27,6 +28,9 @@
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
     "axios": "^1.11.0",
+    "dompurify": "^3.2.6",
+    "highlight.js": "^11.11.1",
+    "marked": "^16.2.1",
     "monaco-editor": "^0.52.2",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
@@ -37,6 +41,7 @@
     "@playwright/test": "^1.54.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tsconfig/node22": "^22.0.2",
+    "@types/dompurify": "^3.0.5",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.17.0",
     "@vitejs/plugin-vue": "^6.0.1",
