--- a/kiro-kaiji-refactor-rampage/aws/serverless-s3.yml
+++ b/kiro-kaiji-refactor-rampage/aws/serverless-s3.yml
@@ -1,6 +1,5 @@
 service: kaiju-refactor-rampage-site
 
-# Make sure you are using Serverless Framework v3.
 frameworkVersion: "3"
 
 plugins:
@@ -9,35 +8,33 @@ plugins:
 provider:
   name: aws
   runtime: nodejs18.x
-  region: us-west-2 # Change to your preferred AWS region
-  stage: dev # Example stage
+  region: us-west-2
+  stage: dev
 
-# Custom variables to define S3 bucket name and regions
 custom:
   bucketName: ${self:service}-${self:provider.stage}
   s3Sync:
-    # Sync the compiled Vue app from the 'dist' directory
     - bucketName: ${self:custom.bucketName}
       localDir: ../dist/
-
-    # Sync the image assets from the 'src/assets/images' directory
     - bucketName: ${self:custom.bucketName}
-      bucketPrefix: src/assets/images/ # S3 path to upload files
+      bucketPrefix: src/assets/images/
       localDir: ../src/assets/images/
 
 resources:
   Resources:
-    # Define the S3 bucket
     StaticSiteBucket:
       Type: AWS::S3::Bucket
       Properties:
         BucketName: ${self:custom.bucketName}
-        AccessControl: PublicRead
         WebsiteConfiguration:
           IndexDocument: index.html
-          ErrorDocument: index.html # Important for SPAs to handle client-side routing
+          ErrorDocument: index.html
+        PublicAccessBlockConfiguration:
+          BlockPublicAcls: true
+          BlockPublicPolicy: false # Explicitly set to false to allow public policies
+          IgnorePublicAcls: true
+          RestrictPublicBuckets: false # Explicitly set to false to allow public policies
 
-    # Configure the S3 bucket policy for public access
     StaticSiteBucketPolicy:
       Type: AWS::S3::BucketPolicy
       Properties:
