✨ feat: kiro-kaiji-refactor-rampage - 23 Use AWS Cloud Mode Services by default
- Updated aiService.ts to default to AWS provider instead of Kiro for cloud mode
- Modified appStore.ts to initialize with AWS cloud mode by default
- Added AWS authentication flow with automatic session management
- Created comprehensive manual test plan for AWS integration
- Skipped failing tests as requested (GradingResults, ZoomAFriendPanel, LocalEvaluationService)
- Removed empty markdownService test file
- Build process verified and working correctly
- AWS backend services deployed to: https://wz1g0oat52.execute-api.us-west-2.amazonaws.com/dev

--- a/kiro-kaiji-refactor-rampage/package.json
+++ b/kiro-kaiji-refactor-rampage/package.json
@@ -12,7 +12,7 @@
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "test": "vitest --run",
-    "test:unit": "vitest",
+    "test:unit": "vitest --no-watch",
     "test:watch": "vitest",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
