--- a/kiro-kaiji-refactor-rampage/package.json
+++ b/kiro-kaiji-refactor-rampage/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
+    "build:skip-types": "vite build",
     "preview": "vite preview",
     "test": "vitest --run",
     "test:unit": "vitest --no-watch",
