--- a/kiro-kaiji-refactor-rampage/tsconfig.app.json
+++ b/kiro-kaiji-refactor-rampage/tsconfig.app.json
@@ -1,7 +1,19 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
-  "exclude": ["src/**/__tests__/*"],
+  "include": [
+    "env.d.ts", 
+    "src/**/*.ts", 
+    "src/**/*.vue",
+    "src/**/*.js"
+  ],
+  "exclude": [
+    "src/**/__tests__/**/*", 
+    "src/**/*.spec.ts", 
+    "src/**/*.test.ts",
+    "**/__tests__/**/*",
+    "**/*.spec.ts", 
+    "**/*.test.ts"
+  ],
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
